server: Add offboard_feerate and offboard_fixed_fee_vb config fields
