# bark-rest/openapi.json
@@ -1690,6 +1690,7 @@
           "max_user_invoice_cltv_delta",
           "min_board_amount_sat",
           "offboard_feerate_sat_per_kvb",
+          "offboard_fixed_fee_vb",
           "ln_receive_anti_dos_required"
         ],
         "properties": {
@@ -1740,6 +1741,12 @@
             "type": "integer",
             "format": "int64",
             "description": "offboard feerate in sat per kvb",
+            "minimum": 0
+          },
+          "offboard_fixed_fee_vb": {
+            "type": "integer",
+            "format": "int64",
+            "description": "fixed number of vb charged additinally for an offboard\nthis is charged after being multiplied with the offboard feerate",
             "minimum": 0
           },
           "required_board_confirmations": {
