# server/src/lib.rs
@@ -256,7 +256,8 @@ impl Server {
 			required_board_confirmations: self.config.required_board_confirmations,
 			max_user_invoice_cltv_delta: self.config.max_user_invoice_cltv_delta,
 			min_board_amount: self.config.min_board_amount,
-			offboard_feerate: self.config.round_tx_feerate,
+			offboard_feerate: self.config.offboard_feerate,
+			offboard_fixed_fee_vb: self.config.offboard_fixed_fee_vb,
 			ln_receive_anti_dos_required: self.config.ln_receive_anti_dos_required,
 		}
 	}
